# ALevelNEA

./: Makefile  README.md  pyproject.toml
src/: main.py
src/graphics/: __init__.py  cube.py  engine.py  shape.py
src/gui/: __init__.py  gui.py
src/rubix_cube/: __init__.py  rubix_2d.py  rubix_cube.py  rubix_solver.py
